Change alt text for CEO image to 'CEO'
Updated alt attribute for CEO image to improve accessibility.

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                src="owner.jpg" 
             -->
             <div class="mgmt-card">
-                <img src="CEO.jpg" class="mgmt-img" alt="Founder">
+                <img src="CEO.jpg" class="mgmt-img" alt="CEO">
                 <div class="mgmt-info">
                     <div class="mgmt-role">Founder & Co-Owner</div>
                     <div class="mgmt-name">Marvin C. Santianez</div>
