Update leadership image source from COE.jpg to CEO.jpg

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         <h2 style="margin-top:40px">Meet Our Leadership</h2>
         <div class="mgmt-grid">
             <div class="mgmt-card">
-                <img src="COE.jpg" class="mgmt-img" alt="Founder">
+                <img src="CEO.jpg" class="mgmt-img" alt="Founder">
                 <div class="mgmt-info">
                     <div class="mgmt-role">Founder & Owner</div>
                     <div class="mgmt-name">Marvin C. Santianez</div>
