Update leadership section and HTML comments

--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@
         <nav class="nav-links" id="nav">
             <a href="#home">Home</a>
             <a href="#about">About</a>
+            <a href="#leadership">Leadership</a>
             <a href="#services">Services</a>
             <a href="#why">Why Us</a>
             <a href="#quote">Get Quote</a>
@@ -504,15 +505,20 @@
                 <p>By leveraging advanced e2m systems and electronic filing, we streamline the documentation process for faster turnaround times.</p>
             </div>
         </div>
+    </div>
+</section>
 
-        <h2 style="margin-top:40px">Meet Our Leadership</h2>
+<!-- SECTION 2: LEADERSHIP (White Bg) -->
+<section id="leadership">
+    <div class="container">
+        <h2>Meet Our Leadership</h2>
         <div class="mgmt-grid">
             <div class="mgmt-card">
                 <img src="CEO.jpg" class="mgmt-img" alt="Founder">
                 <div class="mgmt-info">
                     <div class="mgmt-role">Founder & Owner</div>
                     <div class="mgmt-name">Marvin C. Santianez</div>
-                    <div class="mgmt-bio">With over 20 years in the industry, MCS leads Macosan with a vision of simplifying Philippine trade complexities for every local entrepreneur.</div>
+                    <div class="mgmt-bio">With over 20 years in the industry, Marvin leads Macosan with a vision of simplifying Philippine trade complexities for every local entrepreneur.</div>
                 </div>
             </div>
             <div class="mgmt-card">
@@ -524,7 +530,7 @@
                 </div>
             </div>
             <div class="mgmt-card">
-                <img src="Marketing.jpeg" class="mgmt-img" alt="Marketing">
+                <img src="Marketing.jpg" class="mgmt-img" alt="Marketing">
                 <div class="mgmt-info">
                     <div class="mgmt-role">Head of Marketing</div>
                     <div class="mgmt-name">Mary Ann Rolle</div>
@@ -536,14 +542,14 @@
                 <div class="mgmt-info">
                     <div class="mgmt-role">Head of Operations</div>
                     <div class="mgmt-name">Mhel Anthony Santianez</div>
-                    <div class="mgmt-bio">Anothony manages daily coordination with port authorities, ensuring your cargo moves through the pipeline with record-breaking speed.</div>
+                    <div class="mgmt-bio">Mhel manages daily coordination with port authorities, ensuring your cargo moves through the pipeline with record-breaking speed.</div>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<!-- SECTION 2: SERVICES (White Bg) -->
+<!-- SECTION 3: SERVICES (Light Bg) -->
 <section id="services">
     <div class="container">
         <h2>Our Specialized Services</h2>
@@ -583,7 +589,7 @@
     </div>
 </section>
 
-<!-- SECTION 3: WHY (Light Bg) -->
+<!-- SECTION 4: WHY (White Bg) -->
 <section id="why">
     <div class="container">
         <h2>Why Partner with Us</h2>
@@ -596,7 +602,7 @@
     </div>
 </section>
 
-<!-- SECTION 4: QUOTE (White Bg) -->
+<!-- SECTION 5: QUOTE (Light Bg) -->
 <section id="quote">
     <div class="container">
         <h2>Get a Shipment Quotation</h2>
@@ -625,7 +631,7 @@
     </div>
 </section>
 
-<!-- SECTION 5: CONTACT (Light Bg) -->
+<!-- SECTION 6: CONTACT (White Bg) -->
 <section id="contact">
     <div class="container">
         <h2>Get In Touch</h2>
